package at.technikum.tolanzeilinger.tourplanner.model.tours;

public enum Hilltype {
    DEFAULT_STRATEGY,
    AVOID_UP_HILL,
    AVOID_DOWN_HILL,
    AVOID_ALL_HILLS,
    FAVOR_UP_HILL,
    FAVOR_DOWN_HILL,
    FAVOR_ALL_HILLS
}
