package at.technikum.tolanzeilinger.tourplanner.model.tours;

public enum Transportation {
    BIKE,
    CAR,
    CAR_TOLL,
    WALK
}
